--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
   "homepage": "https://github.com/ob-cloud/hardware-suit#readme",
   "devDependencies": {
     "@bitjson/npm-scripts-info": "^1.0.0",
-    "@bitjson/typedoc": "^0.15.0-0",
     "@istanbuljs/nyc-config-typescript": "^0.1.3",
+    "@types/qs": "^6.9.5",
     "ava": "^3.11.1",
     "codecov": "^3.5.0",
     "cz-conventional-changelog": "^2.1.0",
@@ -69,6 +69,7 @@
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-immutable": "^6.0.1",
+    "typedoc": "^0.19.2",
     "typescript": "^3.5.3"
   },
   "ava": {
@@ -94,5 +95,8 @@
       "**/*.spec.js"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.20.0",
+    "qs": "^6.9.4"
+  }
 }
